--- a/lib/generators/templates/mutation_spec.template
+++ b/lib/generators/templates/mutation_spec.template
@@ -14,7 +14,7 @@ module Mutations
     def query(<%= "#{arguments.pluck(:name).join(", ")}" %>)
       <<~GQL
         mutation{
-          <%= name.camelize(:lower) %>(input: {<%= "#{arguments.pluck(:name).map{|argument| "#{argument.camelize(:lower)}: \"\#{#{argument}}\"" }.join(", ")}" %>}){
+          <%= name.camelize(:lower) %>(input: {<%= "#{arguments.map{|argument| "#{argument.name.camelize(:lower)}: #{argument.should_quote? ? "\"" : ""}#{argument.name}#{argument.should_quote? ? "\"" : ""}" }.join(", ")}" %>}){
             status
             data
             errors{
