--- a/lib/generators/templates/type_file.template
+++ b/lib/generators/templates/type_file.template
@@ -1,5 +1,5 @@
 module Types
   class <%= name.camelize %>Type < Types::BaseObject
-    <%= fields.map{|argument| "field :#{field.name}, #{field.type}, null: #{field.null}" }.join("\n    ") %>
+    <%= fields.map{|field| "field :#{field.name}, #{field.type}, null: #{field.null}" }.join("\n    ") %>
   end
 end
