--- a/lib/generators/templates/mutation_spec.template
+++ b/lib/generators/templates/mutation_spec.template
@@ -1,11 +1,11 @@
 require "rails_helper"
 
 module Mutations
-  RSpec.describe <%= name.camelize %>, type: :request do
-    describe "resolve" do
+  RSpec.describe GraphQLController, type: :controller do
+    describe "<%= name.camelize %> mutation" do
       it "should do something" do
         post "/graphql", params: {query: query(<%= "#{arguments.map{|argument| "#{argument.should_quote? ? "\"" : ""}\#{#{argument.name.upcase}}#{argument.should_quote? ? "\"" : ""}" }.join(", ")}" %>)}
-        query_response = data(response)
+        mutation_response = data(response)
       end
     end
 
@@ -18,7 +18,6 @@ module Mutations
         mutation{
           <%= name.camelize(:lower) %>(input: {<%= "#{arguments.map{|argument| "#{argument.name.camelize(:lower)}: #{argument.should_quote? ? "\"" : ""}\#{#{argument.name}}#{argument.should_quote? ? "\"" : ""}" }.join(", ")}" %>}){
             status
-            data
             errors{
               property
               message
