fixed small typos and updated gem version

--- a/lib/generators/templates/mutation_spec.template
+++ b/lib/generators/templates/mutation_spec.template
@@ -1,7 +1,7 @@
 require "rails_helper"
 
 module Mutations
-  RSpec.describe GraphQLController, type: :controller do
+  RSpec.describe GraphqlController, type: :controller do
     describe "<%= name.camelize %> mutation" do
       it "should do something" do
         post "/graphql", params: {query: query(<%= "#{arguments.map{|argument| "#{argument.should_quote? ? "\"" : ""}\#{#{argument.name.upcase}}#{argument.should_quote? ? "\"" : ""}" }.join(", ")}" %>)}
