--- a/lib/generators/templates/mutation_spec.template
+++ b/lib/generators/templates/mutation_spec.template
@@ -16,7 +16,7 @@ module Mutations
     def query(<%= "#{arguments.pluck(:name).join(", ")}" %>)
       <<~GQL
         mutation{
-          <%= name.camelize(:lower) %>(input: {<%= "#{arguments.map{|argument| "#{argument.name.camelize(:lower)}: #{argument.should_quote? ? "\"" : ""}\#{#{argument.name}}#{argument.should_quote? ? "\"" : ""}" }.join(", ")}" %>}){
+          <%= name.camelize(:lower) %>(<%= "#{arguments.map{|argument| "#{argument.name.camelize(:lower)}: #{argument.should_quote? ? "\"" : ""}\#{#{argument.name}}#{argument.should_quote? ? "\"" : ""}" }.join(", ")}" %>){
             status
             errors{
               property
